# theia

./: .bazelrc  .gitignore  .gitlab-ci.yml  .gitmodules  .mcp.json  1  BUILD.bazel  MODULE.bazel  README.md  autosar  default.xml  env.sh  mkdocs.yml  mlbevo_gen2_cmp_demo  mlbevo_gen2_cmp_psp  pero_cmp_gw_cln_demo  pero_cmp_gw_svc  pero_cmp_lnx  pero_cmp_ti  pero_cmp_ti_gw  pyproject.toml  pyrightconfig.json  setup.sh  setup.zsh  theia  theia.py
apps/manifest/: BUILD.bazel  __init__.py  applications.py  executor.py  rig.py  test_rig.py  zonal_rig.py
demo/: .bazelrc  .gitignore  .theia  BUILD.bazel  CMakeLists.txt  MODULE.bazel  README.md  __init__.py  bazel-bin  bazel-demo  bazel-out  bazel-testlogs  setup_local.sh  stage_local.sh
demo/Demo3WayP1/impl/: BUILD.bazel  CounterNode_handlers.cc  (+2 more)
demo/apps/: BUILD.bazel
demo/deploy/: README.md  gen_ansible.py  orchestrate.yml
demo/manifest/: BUILD.bazel  __init__.py  applications.py  assemble.py  rig.py  services  test_rig.py  zonal_rig.py
demo/migration/: BUILD.bazel  README.md  counter_v1_to_v2.cc  counter_v1_to_v2.json  observer_v1_to_v2.json  plugin.bzl  schema_v4.json  seed.py
demo/nodes/: CMakeLists.txt  counter_node.cc  counter_node.hh  demo_codecs.hh  driver_node.hh  driver_node.tcc  incrementer_node.hh  incrementer_node.tcc  observer_node.hh  observer_node.tcc  ticker_node.cc
demo/p1/: CMakeLists.txt  main.cc
demo/p2/: CMakeLists.txt  main.cc
demo/p3/: CMakeLists.txt  main.cc
demo/proto/: BUILD.bazel
demo/sm_broadcast/: BUILD.bazel  test_sm_broadcast.cc
demo/src/: counter_node.cc  counter_node.hh  demo_codecs.hh  driver_node.hh  driver_node.tcc  incrementer_node.hh  incrementer_node.tcc  main.cc  observer_node.hh  observer_node.tcc  p1_main.cc  p2_main.cc  p3_main.cc  ticker_node.hh
demo/system/: package.art  services  supervisor  system.art
demo/test/: fsm_drive.py  observer_stream.py  probe_expect_call.py  probe_loopback.py  probe_vs_cpp.py  trace_collector_fanout.py
demo/tests/: fsm_drive.py
demo/trace/: trace_decoder_apps_protos.cc
deploy/: BUILD.bazel  Dockerfile.base  README.md  docker-compose.yml  run-supervisor.sh  stage.sh  theia-run.sh  theia-supervisor.service
deploy/ansible/: ansible.cfg  cleanup.yml  deploy-gnss.yml  orchestrate.yml  provision.yml
deploy/central/: Dockerfile
deploy/colony-patches/: README.md  ansible_cleanup.yml  ansible_inventory_hosts  ansible_orchestrate.yml  ansible_provision.yml  ansible_tasks_fetch-manifest-s3.yml  ansible_tasks_install-supervisor-unit.yml  ansible_tasks_os-packages.yml  api_colony_api_app.py  api_colony_api_runner.py  bin_colony  gs_deployments.py  orchestrate.yml  provision.yml  tasks_fetch-manifest-s3.yml  tasks_install-verify-key.yml
deploy/compute/: Dockerfile
deploy/config/: README.md
deploy/etcd/: README.md  setup.sh  theia-etcd.service
deploy/headscale/: Caddyfile  DEPRECATED.md  docker-compose.yml
deploy/mender/: README.md  build-artifact.sh
deploy/puppet/: DEPRECATED.md  README.md  central.pp  compute.pp  hiera.yaml  orchestration.pp  provisioning.pp
deploy/registry/: README.md  central.yml  compute.yml  gateway.yml  jason.yml  jetson.yml
deploy/rig/: Dockerfile  colony_authorized_keys  entrypoint.sh  mender-inventory-theia  mender.conf
deploy/signing/: theia-swp-verify.pub
deploy/vucm/: campaign.sh  fleet.py
manifest/services/: BUILD.bazel  executor.py  manifest.py  rig.py  services_rig.py  split_rig.py
packaging/: BUILD.bazel
packaging/theia/: BUILD.bazel
platform/manifest/: BUILD.bazel  platform.py
platform/proto/: BUILD.bazel  platform_runtime
platform/runtime/: BUILD.bazel  package.art
platform/supervisor/: BUILD.bazel  CMakeLists.txt
platform/system/: BUILD.bazel  autosar  com  core  crypto  demo  diag  exec  fw  gateway  idsm  log  nm  odd_path_client  osi  per  phm  rds  services  shwa  sm  supervisor  system.art  tornado  tsync  ucm  vucm
rules/: BUILD.bazel  deb.bzl  dist_ipk.bzl  manifest.bzl  migration.bzl  nanopb.bzl  opkg.bzl  pack_ipk.py  psp.bzl  rig.bzl
rules/config/: BUILD.bazel  targets.bzl
services/com/: BUILD.bazel  CMakeLists.txt
services/log/: BUILD.bazel  CMakeLists.txt
supervisor-gui/: BUILD.bazel  CMakeLists.txt
supervisor-gui/src/: grpc_client.cpp  machines.cpp  main.cpp  main_frame.cpp  tcp_client.cpp  tipc_client.cpp  tipc_probe.cpp
supervisor-gui/system/: package.art
system/: BUILD.bazel  apps  autosar  demo  demo_test  gateway  odd_path_client  odd_path_monitor  runtime  services  supervisor  system.art
system/services/: BUILD.bazel  cluster.art  com  core  crypto  diag  exec  fw  idsm  log  nm  osi  per  phm  rds  shwa  sm  tsync  ucm  vucm
system/supervisor/: BUILD.bazel  component.art  package.art  supervisor.options
system/tools/: tdb
testing/: .gitignore  KEYWORDS.md  TESTING.md  pyproject.toml  requirements.txt  run_mcp.sh
testing/deploy/: README.md  test_ansible.py  test_fleet.py  test_theia_release_module.py  test_ucm_adopt.py
testing/rf_theia/: TheiaTestLibrary.py  __init__.py
toolchains/: BUILD.bazel
toolchains/aarch64_linux_gnu/: BUILD.bazel  cc_toolchain_config.bzl  extension.bzl  rpi4_sysroot.bzl
toolchains/arm_gcc_7_2017q4/: BUILD.bazel  cc_toolchain_config.bzl
toolchains/codegen/: BUILD.bazel  extension.bzl  theia_codegen.bzl
toolchains/ti_arm_cgt_18/: BUILD.bazel  armcl_wrapper.sh  cc_toolchain_config.bzl
tools/: BUILD.bazel  artheia_wrapper.sh  deploy_rpi4.sh  gen_dev_certs.sh  rpi4_tipc_kernel.sh  run_mcp.sh  test_release_swp_gate.py  test_theia_start_guard.py  theia.py  theia_mcp.py
tools/migrate/: migrate.py  seed.py  test_migrate.py
tools/rig-enroll/: README.md  enroll.example.json  headscale_client.py  rig_enroll.py  tailscale_client.py
tools/rtdb/: README.md  __init__.py  gen_protos.sh  rtdb.py  rtdb_client.py
tools/supdbg/: README.md  __init__.py  cli.py  client.py  gen_protos.sh  printers.py  repl.py
tools/supervisor-gui/: BUILD.bazel  CMakeLists.txt
tools/tdb/: install.sh  requirements.txt  tdb.py  tdb_client.py  tdb_commands.py
tools/theia_migrate/: BUILD.bazel  theia_migrate.cc
(+1558 files in other folders)
