"""pero_theia — top-level build file.

Quick reference:
  # Build all host targets
  bazel build //... --config=linux

  # Build & test the platform runtime + Functional Clusters
  bazel test //platform/... //services/... --config=linux

The local-host demo deploy bundle (//:install) and the per-rig synthetic deploy
repos (@rig_apps etc.) moved to the demo/ consuming workspace when the demo apps
were extracted. The framework root no longer carries an install target; a
consuming workspace assembles its own (see demo/BUILD.bazel).
"""

package(default_visibility = ["//visibility:public"])
