"""
pero_theia — PERO CMP monorepo Bazel module.

Component map:
  //pero_cmp_ti/...        Hercules TMS570 firmware (arm-none-eabi cross-compile)
  //pero_cmp_ti_gw/...     Hercules gateway firmware (arm-none-eabi cross-compile)
  //pero_cmp_lnx/...       Linux host library (libcmpdecoder, libgw)
  //pero_cmp_gw_svc/...    Gateway NIF service
  //pero_cmp_gw_cln_demo/... Gateway client demo
  //mlbevo_gen2_cmp_psp/...  Platform support package (libpsp, libcodec)
  //mlbevo_gen2_cmp_demo/... Demo app + signal tools
"""

module(
    name = "pero_theia",
    version = "0.1.0",
)

# ── Standard Bazel rules ───────────────────────────────────────────────────
bazel_dep(name = "platforms", version = "0.0.11")
bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "rules_pkg", version = "1.1.0")

# ── Python (code generators) ───────────────────────────────────────────────
bazel_dep(name = "rules_python", version = "1.7.0")

# ── Foreign-CC (wraps CMake/Makefile external libs) ───────────────────────
bazel_dep(name = "rules_foreign_cc", version = "0.14.0")

# ── Nanopb (protobuf for embedded C) ──────────────────────────────────────
bazel_dep(name = "nanopb", version = "0.4.9.1")

# ── ARM GCC 7-2017-q4 toolchain (CCS 8 era) — cross-compile for Cortex-R4F
# Fetched by the toolchain extension below; local install at
# /opt/gcc-arm-none-eabi-7-2017-q4 is used when available.
# ──────────────────────────────────────────────────────────────────────────

# ── System library handles ─────────────────────────────────────────────────
# libpcap and libexpat are resolved via the host sysroot (cc_library + linkopts).
# No Bazel module needed — the toolchain locates them via pkg-config.

# ── Toolchain registrations ────────────────────────────────────────────────
# ARM GCC 7-2017-q4 (open-source, CCS 8 era)
register_toolchains("//toolchains/arm_gcc_7_2017q4:cc_suite")

# TI ARM CGT 18.1.1.LTS (original CCS 8 proprietary compiler)
register_toolchains("//toolchains/ti_arm_cgt_18:cc_suite")

# ── Rig module extension ──────────────────────────────────────────────────
# Materialize synthetic Bazel repos from artheia rig.py modules at
# MODULE-resolution time. Each `rig_ext.declare(...)` line below
# becomes a `@<name>//` repo with per-machine deploy bundles
# (`@<name>//<machine>:image`).
#
# Requires the workspace `.venv/bin/artheia` to exist (run
# `pip install -e artheia/` once). See `docs/artheia/bazel.md`.

rig_ext = use_extension("//rules:rig.bzl", "rig_ext")

# @rig_demo — SINGLE-MACHINE (central only), from demo.manifest.rig. Drives the
# local host install bundle (//:install → install/central/).
rig_ext.declare(
    name = "rig_demo",
    rig_module = "demo.manifest.rig",
)

# @rig_zonal — the 2-machine central+compute split, from demo.manifest.zonal_rig.
# Drives the distributed Docker/Puppet deploy (`theia dist` →
# @rig_zonal//{central_host,compute_host}:image). rig_attr=DemoSoftware: the
# module exports several *Software specs (CentralSoftware/ComputeSoftware are
# per-machine intermediates); DemoSoftware is the full multi-machine one (the
# alphabetical default would wrongly pick CentralSoftware = central-only).
rig_ext.declare(
    name = "rig_zonal",
    rig_module = "demo.manifest.zonal_rig",
    rig_attr = "DemoSoftware",
)
use_repo(rig_ext, "rig_demo", "rig_zonal")
