"""
pero_theia — standalone Theia Bazel module (the AUTOSAR-Adaptive-style platform).

Component map (standalone theia.git):
  //platform/runtime/...   actor runtime (GenServer/StateM/Runnable, header-lib)
  //platform/supervisor/.. OTP-style supervisor binary + tombstone
  //services/...           the platform Functional Clusters (com/log/per/sm/ucm/shwa)
  //apps/...               the in-repo demo apps (CI exercise of Theia)
  //packaging/theia/...    the ROS2-style .deb package set

The gateway / Hercules-firmware / AUTOSAR-PSP / per-vehicle vendor trees are NOT
part of theia.git — they live in their own consuming workspaces (e.g. gataway_ws)
that import Theia. See docs/tasks/TODO/repo-split-standalone-theia.md.
"""

module(
    name = "pero_theia",
    version = "0.1.0",
)

# ── Standard Bazel rules ───────────────────────────────────────────────────
bazel_dep(name = "platforms", version = "0.0.11")
bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "rules_pkg", version = "1.1.0")

# ── Python (code generators) ───────────────────────────────────────────────
bazel_dep(name = "rules_python", version = "1.7.0")

# ── Foreign-CC (wraps CMake/Makefile external libs) ───────────────────────
bazel_dep(name = "rules_foreign_cc", version = "0.14.0")

# ── Nanopb (protobuf for embedded C) ──────────────────────────────────────
bazel_dep(name = "nanopb", version = "0.4.9.1")

# ── ARM GCC 7-2017-q4 toolchain (CCS 8 era) — cross-compile for Cortex-R4F
# Fetched by the toolchain extension below; local install at
# /opt/gcc-arm-none-eabi-7-2017-q4 is used when available.
# ──────────────────────────────────────────────────────────────────────────

# ── System library handles ─────────────────────────────────────────────────
# libpcap and libexpat are resolved via the host sysroot (cc_library + linkopts).
# No Bazel module needed — the toolchain locates them via pkg-config.

# ── Toolchain registrations ────────────────────────────────────────────────
# ARM GCC 7-2017-q4 (open-source, CCS 8 era)
register_toolchains("//toolchains/arm_gcc_7_2017q4:cc_suite")

# TI ARM CGT 18.1.1.LTS (original CCS 8 proprietary compiler)
register_toolchains("//toolchains/ti_arm_cgt_18:cc_suite")

# aarch64-linux-gnu — cross-compile to Raspberry Pi 4 (aarch64, Debian bookworm)
# for //rules/config:rpi4. Host gcc-aarch64-linux-gnu + the bookworm sysroot.
# The sysroot's absolute path is captured by the @rpi4_sysroot repo rule (the
# sysroot is gitignored host data; the cross-toolchain needs an absolute path).
rpi4_sysroot_ext = use_extension("//toolchains/aarch64_linux_gnu:extension.bzl", "rpi4_sysroot_ext")
use_repo(rpi4_sysroot_ext, "rpi4_sysroot")
register_toolchains("//toolchains/aarch64_linux_gnu:cc_suite")

# ── Rig module extension ──────────────────────────────────────────────────
# Materialize synthetic Bazel repos from artheia rig.py modules at
# MODULE-resolution time. Each `rig_ext.declare(...)` line below
# becomes a `@<name>//` repo with per-machine deploy bundles
# (`@<name>//<machine>:image`).
#
# Requires the workspace `.venv/bin/artheia` to exist (run
# `pip install -e artheia/` once). See `docs/artheia/bazel.md`.

rig_ext = use_extension("//rules:rig.bzl", "rig_ext")

# @rig_apps — SINGLE-MACHINE (central only), from apps.manifest.rig. Drives the
# local host install bundle (//:install → install/central/).
rig_ext.declare(
    name = "rig_apps",
    rig_module = "apps.manifest.rig",
)

# @rig_test — the 2-machine central+compute split, ALL-x86, from
# apps.manifest.test_rig. Drives the DOCKER provisioning/orchestration test
# (`theia dist` → @rig_test//{central,compute}:image; docker-compose). x86 so it
# builds + runs on the dev box without arm64 hardware. rig_attr=DemoSoftware (the
# full multi-machine spec; CentralSoftware/ComputeSoftware are per-machine
# intermediates the alphabetical default would wrongly pick).
rig_ext.declare(
    name = "rig_test",
    rig_module = "apps.manifest.test_rig",
    rig_attr = "DemoSoftware",
)

# @rig_zonal — the SAME 2-machine split but for REAL HARDWARE (aarch64): central
# = Raspberry Pi 4, compute = Jetson AGX Orin. Needs the rpi4/jetson sysroots +
# cc-toolchains registered to build. Use @rig_test for docker; @rig_zonal for the
# physical deploy.
rig_ext.declare(
    name = "rig_zonal",
    rig_module = "apps.manifest.zonal_rig",
    rig_attr = "DemoSoftware",
)
use_repo(rig_ext, "rig_apps", "rig_test", "rig_zonal")
