"""
pero_theia — standalone Theia Bazel module (the AUTOSAR-Adaptive-style platform).

Component map (standalone theia.git):
  //platform/runtime/...   actor runtime (GenServer/StateM/Runnable, header-lib)
  //platform/supervisor/.. OTP-style supervisor binary + tombstone
  //services/...           the platform Functional Clusters (com/log/per/sm/ucm/shwa)
  //packaging/theia/...    the ROS2-style .deb package set

The demo apps, the gateway / Hercules-firmware / AUTOSAR-PSP / per-vehicle vendor
trees are NOT part of theia.git — they live in their own consuming workspaces
(e.g. demo/, gataway_ws) that import Theia as the `pero_theia` module. The
per-rig synthetic deploy repos (@rig_apps etc.) are declared in those consuming
workspaces' MODULE.bazel via `@pero_theia//rules:rig.bzl`, not here. See
docs/tasks/TODO/repo-split-standalone-theia.md.
"""

module(
    name = "pero_theia",
    version = "0.1.0",
)

# ── Standard Bazel rules ───────────────────────────────────────────────────
bazel_dep(name = "platforms", version = "0.0.11")
bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "rules_pkg", version = "1.1.0")

# ── Python (code generators) ───────────────────────────────────────────────
bazel_dep(name = "rules_python", version = "1.7.0")

# ── Foreign-CC (wraps CMake/Makefile external libs) ───────────────────────
bazel_dep(name = "rules_foreign_cc", version = "0.14.0")

# ── Nanopb (protobuf for embedded C) ──────────────────────────────────────
bazel_dep(name = "nanopb", version = "0.4.9.1")

# ── ARM GCC 7-2017-q4 toolchain (CCS 8 era) — cross-compile for Cortex-R4F
# Fetched by the toolchain extension below; local install at
# /opt/gcc-arm-none-eabi-7-2017-q4 is used when available.
# ──────────────────────────────────────────────────────────────────────────

# ── System library handles ─────────────────────────────────────────────────
# libpcap and libexpat are resolved via the host sysroot (cc_library + linkopts).
# No Bazel module needed — the toolchain locates them via pkg-config.

# ── Toolchain registrations ────────────────────────────────────────────────
# ARM GCC 7-2017-q4 (open-source, CCS 8 era)
register_toolchains("//toolchains/arm_gcc_7_2017q4:cc_suite")

# TI ARM CGT 18.1.1.LTS (original CCS 8 proprietary compiler)
register_toolchains("//toolchains/ti_arm_cgt_18:cc_suite")

# aarch64-linux-gnu — cross-compile to Raspberry Pi 4 (aarch64, Debian bookworm)
# for //rules/config:rpi4. Host gcc-aarch64-linux-gnu + the bookworm sysroot.
# The sysroot's absolute path is captured by the @rpi4_sysroot repo rule (the
# sysroot is gitignored host data; the cross-toolchain needs an absolute path).
rpi4_sysroot_ext = use_extension("//toolchains/aarch64_linux_gnu:extension.bzl", "rpi4_sysroot_ext")
use_repo(rpi4_sysroot_ext, "rpi4_sysroot")
register_toolchains("//toolchains/aarch64_linux_gnu:cc_suite")

# ── Rig module extension ──────────────────────────────────────────────────
# The per-rig synthetic deploy repos (@rig_apps / @rig_test / @rig_zonal) are NO
# LONGER declared here. They are owned by the CONSUMING workspaces (e.g. demo/),
# whose MODULE.bazel loads `@pero_theia//rules:rig.bzl` and declares its own
# rig.py modules. The framework just ships the rig.bzl extension (under //rules)
# for those workspaces to use. See demo/MODULE.bazel for an example.
