[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "theia-workspace"
version = "0.0.1"
description = "In-repo Theia workspace Python layer: the platform services + demo apps manifest packages consumed by the artheia toolchain."
requires-python = ">=3.10"
authors = [{ name = "Theia Runtime" }]
license = { text = "MIT" }

# Depends on the artheia ADT; install artheia separately
# (pip install -e artheia/) before installing this.
# Vendor projects (gateway, AUTOSAR PSP, per-vehicle rigs) live in their OWN
# consuming workspaces (e.g. gataway_ws) — no longer part of standalone theia.git.

[tool.setuptools.packages.find]
where = ["."]
include = ["services*", "apps*"]
exclude = ["artheia*", "autosar*", "gateway*", "docs*", "up*", "tests*", "vendor*"]
