"""demo — consuming-workspace top-level build file.

The local-host demo deploy bundle. Moved here from the framework root when the
demo was extracted into its own consuming workspace: the framework BINARIES are
referenced via @pero_theia//...; the rig OUTPUTS are this workspace's own
@rig_apps//... (declared in this workspace's MODULE.bazel).
"""

load("@rules_pkg//pkg:install.bzl", "pkg_install")
load("@rules_pkg//pkg:mappings.bzl", "pkg_attributes", "pkg_files", "pkg_mkdirs")

package(default_visibility = ["//visibility:public"])

# ── Host install bundle ────────────────────────────────────────────────────
#
#   bazel run //:install -- --destdir <abs-dir>
#
# lays the host artifacts out in the runtime filesystem shape:
#
#   <dir>/theia/bin/   — executables (FC daemons + run-supervisor.sh)
#   <dir>/theia/lib/   — shared libraries (the trace decoder .so)
#   <dir>/etc/theia/   — config: executor.json (supervisor tree) +
#                        machines.yaml (GUI manifest), from the rig
#
# Only Bazel-built artifacts are packaged. The CMake-built supervisor +
# services/com gRPC bridge are bind-mounted in the docker deploy today;
# packaging them needs a Bazel target for each (follow-up).

# theia/bin — the FC daemon binaries Bazel builds.
# theia/bin — the supervisor + the FC daemons + demo apps it forks. Mirrors
# what apps/stage_local.sh stages (com retired: dropped). The supervisor is
# the gen-app ara::exec binary; children are referenced by `bin/<name>` from
# the executor.json tree.
pkg_files(
    name = "install_bin",
    srcs = [
        "@pero_theia//platform/supervisor/main:supervisor",
        "@pero_theia//services/log/main:log",
        "@pero_theia//services/per/main:per",
        "@pero_theia//services/sm/main:sm",
        "@pero_theia//services/shwa/main:shwa",
        "@pero_theia//services/ucm/main:ucm",
    ],
    attributes = pkg_attributes(mode = "0755"),
    prefix = "theia/bin",
)

# theia/bin — the supervisor entrypoint script.
pkg_files(
    name = "install_bin_scripts",
    srcs = ["@pero_theia//platform/runtime/ota:theia-run.sh"],
    attributes = pkg_attributes(mode = "0755"),
    prefix = "theia/bin",
)

# theia/lib — shared libraries: the pluggable trace-decoder plugins. The
# FRAMEWORK system plugin (sm + framework types) comes from @pero_theia; the
# APP plugin (this workspace's system_apps_* types) is built locally. Consumers
# dlopen BOTH from the install's theia/lib (see THEIA_TRACE_DECODER_PATH).
pkg_files(
    name = "install_lib",
    srcs = [
        "@pero_theia//platform/runtime/trace:libtrace_decoder_system.so",
        "//trace:libtrace_decoder_apps.so",
    ],
    attributes = pkg_attributes(mode = "0644"),
    prefix = "theia/lib",
)

# etc/theia — config emitted by the rig (supervisor tree + GUI manifest).
pkg_files(
    name = "install_etc",
    srcs = [
        "@rig_apps//:executor_json",
        "@rig_apps//:machines_yaml",
    ],
    attributes = pkg_attributes(mode = "0644"),
    prefix = "etc/theia",
)

# Supervisor tree → install/central/. The host install bundle is
# SINGLE-MACHINE (@rig_apps = manifest.rig, central hosts everything).
# The 2-machine central+compute split is the distributed Docker/Ansible deploy
# (@rig_zonal = manifest.zonal_rig), built via `theia dist`, not bundled
# here.
pkg_files(
    name = "install_central",
    srcs = ["@rig_apps//:executor_json_central"],
    attributes = pkg_attributes(mode = "0644"),
    # The genrule names the output exec_central/executor.json (prefixed to
    # avoid colliding with the `central` per-machine subpackage); strip that
    # prefix so it lands at <prefix>/executor.json.
    strip_prefix = "exec_central",
    prefix = "central",
)

# Keep the layout's dirs present even when a group is empty.
pkg_mkdirs(
    name = "install_dirs",
    dirs = [
        "theia/bin",
        "theia/lib",
        "etc/theia",
        "central",
    ],
)

pkg_install(
    name = "install",
    srcs = [
        ":install_bin",
        ":install_bin_scripts",
        ":install_lib",
        ":install_etc",
        ":install_central",
        ":install_dirs",
    ],
)
