# demo — a Theia consuming workspace's Bazel module. Builds this workspace's
# OWN app C++ (apps/<App>/...) against the sibling Theia source tree, consumed as
# the `pero_theia` module via local_path_override (the gataway_ws pattern). The
# gen-app BUILD files reference //platform/runtime, //proto,
# //platform/supervisor/tombstone — resolved by the alias shims under platform/
# that forward to @pero_theia//... (the app's OWN proto under proto/system/apps
# builds locally).
module(name = "demo", version = "0.1.0")

bazel_dep(name = "platforms", version = "0.0.11")
bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "rules_pkg", version = "1.1.0")
bazel_dep(name = "rules_python", version = "1.7.0")
bazel_dep(name = "nanopb", version = "0.4.9.1")

# The Theia source tree — the runtime/supervisor/proto labels the apps compile
# against. Sibling checkout ($THEIA_ROOT); swap for /opt/theia once Theia is a deb.
bazel_dep(name = "pero_theia", version = "0.1.0")
local_path_override(module_name = "pero_theia", path = "..")

# ── Rig module extension ──────────────────────────────────────────────────
# Materialize synthetic Bazel repos from this workspace's artheia rig.py
# modules at MODULE-resolution time. Each `rig_ext.declare(...)` line below
# becomes a `@<name>//` repo with per-machine deploy bundles
# (`@<name>//<machine>:image`) plus combined executor.json / machines.json.
#
# rig.bzl is a FRAMEWORK file: it lives in the pero_theia module, so we load it
# as `@pero_theia//rules:rig.bzl` (the bare `//rules:rig.bzl` would resolve to
# this `demo` module, which has no rules/ dir). The extension itself is
# module-agnostic — it materializes a repo rule that resolves the Theia repo via
# `@pero_theia//...` labels and runs `artheia rig-deps <module>` against THIS
# workspace's rig modules (manifest.rig etc.).
#
# Requires this workspace's `.venv/bin/artheia` (or PATH-resolved artheia). The
# rig modules (manifest.rig / manifest.test_rig / manifest.zonal_rig) are
# importable because `manifest/` is a package at this workspace root.
rig_ext = use_extension("@pero_theia//rules:rig.bzl", "rig_ext")

# @rig_apps — SINGLE-MACHINE (central only), from manifest.rig. Drives the
# local host install bundle (//:install → install/central/).
rig_ext.declare(
    name = "rig_apps",
    rig_module = "manifest.rig",
)

# @rig_test — the 2-machine central+compute split, ALL-x86, from
# manifest.test_rig. Drives the DOCKER provisioning/orchestration test
# (`theia dist` → @rig_test//{central,compute}:image; docker-compose). x86 so it
# builds + runs on the dev box without arm64 hardware. rig_attr=DemoSoftware (the
# full multi-machine spec; CentralSoftware/ComputeSoftware are per-machine
# intermediates the alphabetical default would wrongly pick).
rig_ext.declare(
    name = "rig_test",
    rig_module = "manifest.test_rig",
    rig_attr = "DemoSoftware",
)

# @rig_zonal — the SAME 2-machine split but for REAL HARDWARE (aarch64): central
# = Raspberry Pi 4, compute = Jetson AGX Orin. Needs the rpi4/jetson sysroots +
# cc-toolchains registered to build. Use @rig_test for docker; @rig_zonal for the
# physical deploy.
rig_ext.declare(
    name = "rig_zonal",
    rig_module = "manifest.zonal_rig",
    rig_attr = "DemoSoftware",
)
use_repo(rig_ext, "rig_apps", "rig_test", "rig_zonal")
