# demo — a Theia consuming workspace's Bazel module. Builds this workspace's
# OWN app C++ (apps/<App>/...) against the sibling Theia source tree, consumed as
# the `pero_theia` module via local_path_override (the gataway_ws pattern). The
# gen-app BUILD files reference //platform/runtime, //proto,
# //platform/supervisor/tombstone — resolved by the alias shims under platform/
# that forward to @pero_theia//... (the app's OWN proto under proto/system/apps
# builds locally).
module(name = "demo", version = "0.1.0")

bazel_dep(name = "platforms", version = "0.0.11")
bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "rules_pkg", version = "1.1.0")
bazel_dep(name = "rules_python", version = "1.7.0")
bazel_dep(name = "nanopb", version = "0.4.9.1")

# The Theia source tree — the runtime/supervisor/proto labels the apps compile
# against. Sibling checkout ($THEIA_ROOT); swap for /opt/theia once Theia is a deb.
bazel_dep(name = "pero_theia", version = "0.1.0")
local_path_override(module_name = "pero_theia", path = "..")

# ── Rig module extension ──────────────────────────────────────────────────
# Materialize synthetic Bazel repos from this workspace's test-target rig
# modules at MODULE-resolution time. Each `rig_ext.declare(...)` line below
# becomes a `@<name>//` repo with per-machine deploy bundles
# (`@<name>//<machine>:image`, `:components`) plus the machine NAME LIST
# (`@<name>//:machines_json`).
#
# rig.bzl is a FRAMEWORK file: it lives in the pero_theia module, so we load it
# as `@pero_theia//rules:rig.bzl` (the bare `//rules:rig.bzl` would resolve to
# this `demo` module, which has no rules/ dir). The extension runs
# `artheia serialize-manifest manifest.<target>.rig --attr <ATTR>` against THIS
# workspace's rig modules and consumes the per-machine JSON it emits.
#
# Requires this workspace's `.venv/bin/artheia` (or the @pero_theia framework
# venv, or PATH-resolved artheia). The rig modules (manifest.single.rig /
# manifest.split.rig) assemble manifest.apps (this workspace) ⊕ manifest.services
# (@pero_theia) — a PEP-420 namespace package across both module roots, both of
# which the extension puts on PYTHONPATH.
rig_ext = use_extension("@pero_theia//rules:rig.bzl", "rig_ext")

# @rig_single — SINGLE-MACHINE (central only) running everything, from
# manifest.single.rig's RIG. The dev-flow rig; drives the local host install
# bundle. `bazel build @rig_single//central:components` (and :image).
rig_ext.declare(
    name = "rig_single",
    rig_module = "manifest.single.rig",
    rig_attr = "RIG",
)

# @rig_docker — the 2-machine central+compute split, ALL-x86, from
# manifest.split.rig's DOCKER export. Drives the docker-compose provisioning
# test (`bazel build @rig_docker//{central,compute}:image`). x86 so it builds +
# runs on the dev box without arm64 hardware.
rig_ext.declare(
    name = "rig_docker",
    rig_module = "manifest.split.rig",
    rig_attr = "DOCKER",
)

# @rig_hw — the SAME 2-machine split but for REAL HARDWARE (aarch64): central =
# Raspberry Pi 4, compute = Jetson AGX Orin, from manifest.split.rig's HW export.
# Needs the rpi4/jetson sysroots + cc-toolchains registered to build. Use
# @rig_docker for docker; @rig_hw for the physical deploy.
rig_ext.declare(
    name = "rig_hw",
    rig_module = "manifest.split.rig",
    rig_attr = "HW",
)
use_repo(rig_ext, "rig_single", "rig_docker", "rig_hw")
